--- a/sdvx@asphyxia/webui/profile_-score.pug
+++ b/sdvx@asphyxia/webui/profile_-score.pug
@@ -20,6 +20,7 @@ div
             th ID
             th Song Name
             th Difficulty
+            th Date Released
             th Score
             th Exscore
             th Grade
