--- a/sdvx@asphyxia/webui/profile_--detail.pug
+++ b/sdvx@asphyxia/webui/profile_--detail.pug
@@ -2,6 +2,8 @@
   profile: DB.FindOne(refid, { collection: 'profile' })
   score_data: DB.Find(refid, { collection: 'music' })
   skill_data: DB.Find(refid,{collection: 'skill'})
+  xrecord_data: DB.FindOne(refid,{collection: 'x-record'})
+  arena_data: DB.FindOne(refid,{collection: 'arena'})
 
 -
   const padded = _.padStart(profile.id.toString(), 8);
@@ -31,4 +33,6 @@ div
 div(hidden id='data-pass') !{JSON.stringify(profile)}
 div(hidden id='score-pass') !{JSON.stringify(score_data)}
 div(hidden id='skill-pass') !{JSON.stringify(skill_data)}
+div(hidden id='xrecord-pass') !{JSON.stringify(xrecord_data)}
+div(hidden id='arena-pass') !{JSON.stringify(arena_data)}
 script(src="static/asset/js/detail.js") 
