minor info addition

--- a/sdvx@asphyxia/webui/profile_premium generator.pug
+++ b/sdvx@asphyxia/webui/profile_premium generator.pug
@@ -36,7 +36,7 @@ div
             select(name="set_select" id="set_select")
               // option(value="1") Premium Generator 1 (Aqua Set)
       div(style="padding: 15px; text-align: center;")
-        div(style="padding: 5px")
+        div.setinfo(style="padding: 5px")
           h3.count()
         input.input(type="text" name="refid", value=refid readonly)
         button.button(id="pregene-roll" style="font-size: 20px") Roll
