events json update, gene update, arena station 6

--- a/sdvx@asphyxia/webui/profile_premium generator.pug
+++ b/sdvx@asphyxia/webui/profile_premium generator.pug
@@ -35,7 +35,7 @@ div
           .select
             select(name="set_select" id="set_select")
               // option(value="1") Premium Generator 1 (Aqua Set)
-      div(style="padding: 15px; text-align: center;")
+      div(id="roll-div" style="padding: 15px; text-align: center;")
         div.setinfo(style="padding: 5px")
           h3.count()
         input.input(type="text" name="refid", value=refid readonly)
