--- a/sdvx@asphyxia/webui/profile_valkyrie generator.pug
+++ b/sdvx@asphyxia/webui/profile_valkyrie generator.pug
@@ -28,10 +28,11 @@ div
         .control
           .select
             select(name="set_select" id="set_select")
-      div(style="padding: 15px; text-align: center;")
+      div(id="roll-div" style="padding: 15px; text-align: center;")
         div(style="padding: 5px")
           h3.count()
         input.input(type="text" name="refid", value=refid readonly)
+        button.button(id="valgene-roll" style="font-size: 20px") Roll
       br()
       div.item_banners()
 
