--- a/sdvx@asphyxia/webui/profile_--detail.pug
+++ b/sdvx@asphyxia/webui/profile_--detail.pug
@@ -2,6 +2,7 @@
   profile: DB.FindOne(refid, { collection: 'profile' })
   score_data: DB.Find(refid, { collection: 'music' })
   skill_data: DB.Find(refid,{collection: 'skill'})
+  course_data: DB.Find(refid,{collection: 'course'})
   arena_data: DB.Find(refid,{collection: 'arena'})
 
 -
@@ -33,5 +34,6 @@ div
 div(hidden id='data-pass') !{JSON.stringify(profile)}
 div(hidden id='score-pass') !{JSON.stringify(score_data)}
 div(hidden id='skill-pass') !{JSON.stringify(skill_data)}
+div(hidden id='course-pass') !{JSON.stringify(course_data)}
 div(hidden id='arena-pass') !{JSON.stringify(arena_data)}
 script(src="static/asset/js/detail.js") 
