--- a/ddr@asphyxia/webui/profile_settings.pug
+++ b/ddr@asphyxia/webui/profile_settings.pug
@@ -1,5 +1,6 @@
 //DATA//
   profile: DB.FindOne(refid, { collection: "profile" })
+  profile3: DB.FindOne(refid, { collection: "profile3" })
 
 -
   const onOff = [ "Off", "On" ];
@@ -9,7 +10,7 @@
   const filters = [ "Off", "Dark", "Darker", "Darkest" ];
   const judgmentPrioritys = [ "Judgment priority", "Arrow priority" ];
 
-if (profile.usergamedata)
+if profile
   -
     const common = profile.usergamedata.COMMON.strdata.split(",");
     const option = profile.usergamedata.OPTION.strdata.split(",");
@@ -143,5 +144,137 @@ if (profile.usergamedata)
                       option(value=i) #{v}
             p.control
               a.button.is-primary#change-display-timing Submit
+
+else if profile3
+  -
+    const name = profile3.dancerName;
+    const weight = profile3.weight;
+    const dispWeight = profile3.isDispWeight;
+    // const character = parseInt(common[4]);
+    const arrowSkin = profile3.arrowDesign;
+    const guideline = profile3.opGuideline;
+    // const filter = parseInt(option[12]);
+    const judgmentPriority = profile3.arrowPriority;
+    const displayTiming = profile3.opTimingDisp;
+
+  div
+    .card
+      .card-header
+        p.card-header-title
+          span.icon
+            i.mdi.mdi-cog
+          | Profile (WIP)
+
+      .card-content
+        .field.is-horizontal.has-addons
+          .field-label.is-normal
+            label.label Dancer Name
+          .field-body
+            p.control
+              input.input(type="text", id="dancer_name", pattern="[A-Z]{8}", maxlength=8, value=name)
+            //- p.control
+            //-   a.button.is-primary#change-name Change
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Workout Weight
+        //-   .field-body
+        //-     p.control
+        //-       input.input(type="number", id="weight_1", value=weight.split(".")[0])
+        //-     p.control
+        //-       input.input(type="number", id="weight_2", value=weight.split(".")[1])
+        //-     p.control
+        //-       a.button.is-primary#change-weight Change
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Workout Display Calories
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#display_calories
+        //-           if (dispWeight === 1)
+        //-             option(value=0) Off
+        //-             option(value=1, selected) On
+        //-           else
+        //-             option(value=0, selected) Off
+        //-             option(value=1) On
+        //-     p.control
+        //-       a.button.is-primary#change-display-calories Submit
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Arrow Skin
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#arrow_skin
+        //-           each v, i in arrowSkins
+        //-             if (arrowSkin === i)
+        //-               option(value=i, selected) #{v}
+        //-             else
+        //-               option(value=i) #{v}
+        //-     p.control
+        //-       a.button.is-primary#change-arrow-skin Submit
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Guideline
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#guideline
+        //-           each v, i in guidelines
+        //-             if (guideline === i)
+        //-               option(value=i, selected) #{v}
+        //-             else
+        //-               option(value=i) #{v}
+        //-     p.control
+        //-       a.button.is-primary#change-guideline Submit
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Filter concentration
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#filter
+        //-           each v, i in filters
+        //-             if (filter === i)
+        //-               option(value=i, selected) #{v}
+        //-             else
+        //-               option(value=i) #{v}
+        //-     p.control
+        //-       a.button.is-primary#change-filter Submit
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Judgment display priority
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#judgment_priority
+        //-           each v, i in judgmentPrioritys
+        //-             if (judgmentPriority === i)
+        //-               option(value=i, selected) #{v}
+        //-             else
+        //-               option(value=i) #{v}
+        //-     p.control
+        //-       a.button.is-primary#change-judgment-priority Submit
+
+        //- .field.is-horizontal.has-addons
+        //-   .field-label.is-normal
+        //-     label.label Display Timing judgment
+        //-   .field-body
+        //-     p.control
+        //-       .select
+        //-         select#display_timing
+        //-           each v, i in ["Off", "On"]
+        //-             if (displayTiming === i)
+        //-               option(value=i, selected) #{v}
+        //-             else
+        //-               option(value=i) #{v}
+        //-     p.control
+        //-       a.button.is-primary#change-display-timing Submit
 
 script(src="static/js/profile_settings.js")
