--- a/webui/profile_details.pug
+++ b/webui/profile_details.pug
@@ -54,3 +54,4 @@ if profile3
     div(hidden id='profile3-pass') !{JSON.stringify(profile3)}
     div(hidden id='score-pass') !{JSON.stringify(score3)}
     script(src="static/js/profile_details.js")
+    script(src="static/js/common.js")
