--- a/webui/profile_music data.pug
+++ b/webui/profile_music data.pug
@@ -3,6 +3,7 @@
   score3: DB.Find(refid, { collection: "score3" })
 
 -
+link(rel="stylesheet" href="static/css/datatables.css")
 
 if profile3
   div
